# phantomx_pincher

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  phantomx_pincher.repos
.devcontainer/: devcontainer.json
.docker/: build.bash  join.bash  run.bash  run_real.bash  run_sim.bash  run_visual.bash
.docker/host/: install_docker.bash
.docker/utils/: download_sdf_models.bash
.git_hooks/: pre-commit_convert_xacros.bash
.github/workflows/: docker.yml  pre-commit.yml
phantomx_pincher/: CMakeLists.txt  README.md  package.xml
phantomx_pincher/launch/: fake.launch  fake.launch.py  gz.launch  gz.launch.py  real.launch  real_with_ros1_controllers.launch.py
phantomx_pincher_arm_ikfast_plugin/: CMakeLists.txt  README.md  package.xml  phantomx_pincher_arm_moveit_ikfast_plugin_description.xml
phantomx_pincher_arm_ikfast_plugin/scripts/: create.bash  update.bash
phantomx_pincher_arm_ikfast_plugin/src/: phantomx_pincher_arm_ikfast_moveit_plugin.cpp  phantomx_pincher_arm_ikfast_solver.cpp
phantomx_pincher_control/: CMakeLists.txt  README.md  package.xml
phantomx_pincher_control/config/: gripper_action_controller.yaml  gripper_transmission.yaml  phantomx_pincher.yaml
phantomx_pincher_control/launch/: driver.launch
phantomx_pincher_control/scripts/: gripper_action_controller.py  gripper_transmission.py
phantomx_pincher_control/udev/: 50-phantomx-pincher.rules
phantomx_pincher_demos/: CMakeLists.txt  README.md  package.xml
phantomx_pincher_demos/examples/: demo_observe_scene.py  demo_peg_in_hole.py  demo_pick_and_place.py  ex_cartesian_path.py  ex_collision_mesh.py  ex_collision_object.py  ex_collision_primitive.py  ex_gripper.py  ex_gripper_command.py  ex_joint_goal.py  ex_pose_goal.py  ex_servo.py  template.py
phantomx_pincher_demos/examples/assets/: module_holes.stl
phantomx_pincher_demos/launch/: demo_moon_camera_sensors.launch  demo_moon_camera_sensors.launch.py  demo_orbit_pick_and_place.launch  demo_orbit_pick_and_place.launch.py  demo_rover_peg_in_hole.launch  demo_rover_peg_in_hole.launch.py
phantomx_pincher_demos/rviz/: demo_moon_camera_sensors.rviz  demo_orbit_pick_and_place.rviz  demo_rover_peg_in_hole.rviz
phantomx_pincher_demos/worlds/: moon_camera_sensors.sdf  orbit_pick_and_place.sdf  rover_peg_in_hole.sdf
phantomx_pincher_description/: CMakeLists.txt  README.md  meshes  package.xml
phantomx_pincher_description/config/: initial_joint_positions.yaml
phantomx_pincher_description/hooks/: phantomx_pincher_description.dsv.in  phantomx_pincher_description.sh.in
phantomx_pincher_description/launch/: view.launch  view.launch.py  view_gz.launch  view_gz.launch.py
phantomx_pincher_description/phantomx_pincher/: model.config  model.sdf
phantomx_pincher_description/phantomx_pincher/meshes/collision/: finger.stl  task_board.stl
phantomx_pincher_description/phantomx_pincher/meshes/visual/: ax12.dae  f10.dae  f2.dae  f3.dae  f4.dae  finger.dae  gripper_base.dae  phantomx_pincher_mount.dae  task_board.dae  task_board_module_phantomx_pincher_mount.dae
phantomx_pincher_description/rviz/: view.rviz
phantomx_pincher_description/scripts/: xacro2sdf.bash  xacro2sdf_direct.bash  xacro2urdf.bash
phantomx_pincher_description/urdf/: phantomx_pincher.gazebo  phantomx_pincher.ros2_control  phantomx_pincher.ros_control  phantomx_pincher.urdf  phantomx_pincher.urdf.xacro  phantomx_pincher_arm.xacro  phantomx_pincher_hardware.xacro  phantomx_pincher_inertial.xacro  phantomx_pincher_mounting.xacro  phantomx_pincher_utils.xacro
phantomx_pincher_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
phantomx_pincher_moveit_config/config/: controllers_effort.yaml  controllers_position.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controller_manager_gripper_command.yaml  moveit_controller_manager_gripper_trajectory.yaml  ompl_planning.yaml  phantomx_pincher.srdf  servo.yaml  servo_real.yaml  simple_gz_moveit_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
phantomx_pincher_moveit_config/launch/: chomp_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch.py  move_group_external_control.launch.py  moveit_rviz.launch  moveit_servo.launch  ompl_planning_pipeline.launch.xml  pilz_industrial_motion_planner_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_control_moveit_controller_manager.launch.xml  setup_assistant.launch  simple_gz_moveit_controller_manager.launch.xml  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
phantomx_pincher_moveit_config/rviz/: moveit.rviz
phantomx_pincher_moveit_config/scripts/: xacro2srdf.bash
phantomx_pincher_moveit_config/srdf/: phantomx_pincher.srdf  phantomx_pincher.srdf.xacro  phantomx_pincher.xacro
