<?xml version="1.0"?>
<package format="3">
  <name>phantomx_pincher_demos</name>
  <version>1.0.0</version>
  <description>Demos for PhantomX Pincher Robot Arm</description>
  <maintainer email="andrej.orsula@uni.lu">Andrej Orsula</maintainer>
  <author>Andrej Orsula</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>phantomx_pincher</exec_depend>
  <exec_depend>pymoveit2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
