<?xml version="1.0"?>
<package format="2">
  <name>phantomx_pincher_moveit_config</name>
  <version>1.0.0</version>
  <description>MoveIt configuration for PhantomX Pincher Robot Arm</description>
  <maintainer email="andrej.orsula@uni.lu">Andrej Orsula</maintainer>
  <author>Andrej Orsula</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>phantomx_pincher_description</exec_depend>

  <exec_depend>ign_ros_control</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_chomp</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
